configurado o arquivo .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,7 @@ generated/*
 # Arquivos de configuração específicos do IDE
 **/.idea/
 **/.vscode/
+**/.settings
 
 # Arquivos de configuração do sistema operacional
 **/.DS_Store
@@ -43,3 +44,4 @@ generated/*
 
 # Arquivos temporários do Maven
 **/target/m2e-project-plugin/m2e-maven-plugin-data.classpath
+**/.mvn/wrapper
